fix: iframe element cannot be clicked
```
================================== z
=                   |            = |
=               |div.outputCover|= i
=|div.codeView      |           |= n
=                   v            = d
=               |iframe|         = e
================================== x
```

- iframe cannot click because it is covered with codeView
- outputCover is an element covering right side of codeView, and clickable
- Click outputCover -> iframe.focus()

--- a/src/css/region.scss
+++ b/src/css/region.scss
@@ -32,7 +32,7 @@
   padding: 8px 8px $footerHeight 8px;
   overflow: scroll;
 
-  z-index: 10;
+  z-index: 9;
   transform: translateX(0%);
   &.exiting {
     z-index: 1;
@@ -43,6 +43,15 @@
   width: 200%;
   & > * {
     width: 50%;
+  }
+
+  // .output の上にあり、 iframe に focus を与える
+  .outputCover {
+    position: absolute;
+    width: 50%;
+    height: 100%;
+    right: 0;
+    top: 0;
   }
 }
 
@@ -74,11 +83,19 @@
   width: 50%;
   padding: 16px 16px $footerHeight + 8px 8px;
   z-index: 2;
+  &.bringFront {
+    z-index: 10;
+
+    iframe {
+      @include shadow(1);
+    }
+  }
 
   iframe {
+    @include transition(box-shadow);
+    @include shadow(0);
     width: 100%;
     height: 100%;
-    @include shadow(1);
   }
 }
 
